# mentalize

./: .gitignore  docker-compose.yaml
api/: Dockerfile  pyproject.toml
api/account/: admin.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
api/auth/: filters.py  serializers.py  views.py
api/clinic/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
api/config/: settings.py  urls.py
api/tests/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
nginx/: Dockerfile  nginx.conf
web/: Dockerfile  index.html  mentallize  mentallize.pub  package.json  tailwind.config.js
web/nginx/: nginx.conf
web/src/: main.tsx
web/src/api/: api.config.ts
web/src/components/Button/: Button.tsx
web/src/components/DataTable/: index.tsx
web/src/components/DataTable/DataTableBody/: index.tsx
web/src/components/DataTable/DataTableFooter/: index.tsx
web/src/components/DataTable/DataTableHead/: index.tsx
web/src/components/DataTable/Input/: index.tsx
web/src/components/DataTable/Select/: index.tsx
web/src/components/Input/: index.tsx
web/src/components/Layout/: index.tsx
web/src/components/Modal/: Modal.tsx
web/src/components/Select/: Select.tsx
web/src/context/: AdminContext.tsx  ClinicContext.tsx  PersonContext.tsx
web/src/helpers/: choices.helper.ts  dict.helper.ts  formatters.helper.ts  images.helper.ts
web/src/models/: address.ts  admin.ts  cellphone.ts  clinic.ts  key.ts  life.ts  loveLanguage.ts  mbti.ts  person.ts  selfKnowledge.ts  user.ts
web/src/routes/: routes.tsx
(+74 files in other folders)
